--- a/app/src/main/res/layout/activity_capital.xml
+++ b/app/src/main/res/layout/activity_capital.xml
@@ -63,16 +63,36 @@
                             android:text="用户余额：" />
 
                         <TextView
+                            android:id="@+id/yue_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="0000"
                             android:textColor="@color/white" />
+
+                        <ImageView
+                            android:id="@+id/refresh_iv"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@mipmap/refresh" />
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="反水金额：0.00" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/fs_yue_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="反水金额：0.00" />
+
+                        <ImageView
+                            android:id="@+id/refresh1_iv"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@mipmap/refresh" />
+                    </LinearLayout>
 
 
                 </LinearLayout>
