--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -40,12 +40,14 @@
                 android:paddingLeft="10dp">
 
                 <TextView
+                    android:id="@+id/name_tv"
                     style="@style/capial_item_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="账号：123456" />
 
                 <TextView
+                    android:id="@+id/nick_name_tv"
                     style="@style/capial_item_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -80,9 +82,11 @@
                     android:text="用户余额：" />
 
                 <TextView
+                    android:id="@+id/yue_tv"
                     style="@style/capial_item_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="0000" />
 
             </LinearLayout>
@@ -107,6 +111,7 @@
                     android:text="反水余额：" />
 
                 <TextView
+                    android:id="@+id/fs_yue_tv"
                     style="@style/capial_item_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
