--- a/app/src/main/res/layout/frag_deposit_list.xml
+++ b/app/src/main/res/layout/frag_deposit_list.xml
@@ -10,14 +10,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="40dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="时间"
-                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <View
@@ -29,8 +29,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="金额"
-                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <View
@@ -42,13 +42,19 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="状态"
-                android:textColor="@color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/line_bg" />
+
         <ListView
+            android:id="@+id/main_lv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ListView>
     </LinearLayout>
