--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -119,7 +119,10 @@
 
             </LinearLayout>
         </LinearLayout>
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -364,8 +367,39 @@
                     android:src="@mipmap/y_jian" />
             </LinearLayout>
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/llay_banben"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
+                <ImageView
+                    style="@style/main_item_iv"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@mipmap/icon_banben" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="关于" />
+                <TextView
+                    android:id="@+id/my_user_banben"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:gravity="right"
+                    android:text="1.0" />
+
+            </LinearLayout>
+        </LinearLayout>
+</ScrollView>
     </LinearLayout>
 
 </layout>
