--- a/app/src/main/res/layout/item_kj_result.xml
+++ b/app/src/main/res/layout/item_kj_result.xml
@@ -14,17 +14,15 @@
 
         <TextView
             android:id="@+id/item_qh"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" />
 
         <TextView
             android:id="@+id/item_time"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:visibility="gone" />
+            android:gravity="center" />
     </LinearLayout>
 
     <GridView
