--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:gravity="center"
+    android:padding="10dp"
     android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:textColor="@color/black" />
